update pojo
