# app/src/main/kotlin/com/kgmyshin/swagger/sample/api/json/PetJson.kt
@@ -10,6 +10,7 @@ import com.google.gson.annotations.SerializedName
  * @param id 
  * @param category 
  * @param name 
+ * @param parent_name 
  * @param sex 
  * @param photo_urls 
  * @param tags 
@@ -19,6 +20,7 @@ data class PetJson (
     @SerializedName("id") val id: Long,
     @SerializedName("category") val category: CategoryJson,
     @SerializedName("name") val name: String?,
+    @SerializedName("parent_name") val parentName: String,
     @SerializedName("sex") val sex: Long,
     @SerializedName("photo_urls") val photoUrls: List<String>?,
     @SerializedName("tags") val tags: List<TagJson>,
